# devops-exam

./: .gitignore  README.md  alembic.ini  app.py  pyproject.toml  setup.cfg  test_app.py
db_migrations/: env.py
db_migrations/versions/: 001_user_table.py
