[tool.poetry]
name = "devops-challenge"
version = "0.1.1"
description = "DevOps Challenge"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "app.py" }
]

[tool.poetry.dependencies]
python = "~3.11.1"
fastapi = "0.109.2"
pydantic = "2.6.1"
hypercorn = "0.16.0"
aiohttp = "3.9.3"
pydantic-settings = "2.1.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
databases = {version = "^0.8.0", extras = ["postgresql"]}
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-asyncio = "0.23.5"
pytest-cov = "4.1.0"
pytest-watch = "4.2.0"
pre-commit = "3.6.1"
httpx = "0.26.0"
asgi-lifespan = "2.1.0"
yamllint = "1.34.0"
faker = "^23.2.1"

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = 'tests'
addopts = '--cov-report term-missing --strict-markers'

[tool.pytest-watch]
ext = '.py, .yaml, .cfg'

[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"
